--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+.stores-header {
+  padding: 30px 60px;
+  display: flex;
+  flex-direction: row;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
