--- a/client/src/Components/ProductsModal/ProductsModal.css
+++ b/client/src/Components/ProductsModal/ProductsModal.css
@@ -3,9 +3,10 @@ body.active-modal {
 }
 
 .btn-modal {
+    height: 60px;
     padding: 10px 20px;
     display: block;
-    margin: 0 auto 0;
+    margin: auto auto;
     font-size: 18px;
 }
 
